code inspection suggested changes